# rapid_util

./: CMakeLists.txt  COPYRIGHT  README.md  marshal_example.cpp  unmarshal_example.cpp
include/rapid_util/: rapid_util.h  rapid_util_parser.h  rapid_util_preprocessor.h
tests/: CMakeLists.txt  rapid_marshal_test.cpp  rapid_unmarshal_test.cpp  rapid_util_test.cpp  type_traits_test.cpp
